# sample-apj-sup-sa

agentic-workloads/agentic-analytics/: .gitignore  AGENTS.md  DEPLOYMENT.md  README.md  bandit.yaml
agentic-workloads/agentic-analytics/app/voice/: .env.example  Dockerfile  Dockerfile.agentcore  analytics_processor.py  auth.py  bot.py  pcc-deploy.toml  pyproject.toml
agentic-workloads/agentic-analytics/app/voice/tests/: conftest.py  probe_chart_read.py  probe_raw_wire.py  test_agentcore_entrypoint.py  test_agentcore_integration.py  test_processor_turn_lifecycle.py
agentic-workloads/agentic-bedrock-benchmarking/: .dockerignore  .gitignore  Dockerfile  LICENSE  NOTICE  README.md  app.py  auth.py  bedrock.py  config.py  judge.py  pricing.py  pyproject.toml  quota.py  rag.py  requirements.txt
agentic-workloads/genai-product-canvas/: README.md  genai-product-canvas-template.pptx
agentic-workloads/semantic-prompt-routing/: .env.example  .gitignore  README.md  requirements.txt
ai-coding-assistants/bedrock-bridge/: .gitignore  README.md  pyproject.toml
ai-coding-assistants/bedrock-bridge/bedrock_bridge/: cli.py  server.py  translate.py
ai-coding-assistants/bedrock-bridge/docs/: architecture.md  compatibility.md  error-mapping.md  iam.md  logging.md
ai-coding-assistants/bedrock-bridge/scripts/: README.md  e2e_grade.py  probe_tool_use.py
ai-coding-assistants/bedrock-bridge/scripts/git-hooks/: pre-commit
ai-coding-assistants/bedrock-bridge/tests/: test_logging.py  test_server_errors.py  test_translate.py
ai-coding-assistants/bedrock-bridge/tests/fixtures/: sample_01.annotation.md
ai-coding-assistants/bedrock-bridge/tests/functional/: conftest.py  test_live_bridge.py
ai-coding-assistants/bedrock-bridge/tests/manual/: README.md  compat_matrix.py  matrix_e2e.py
ai-coding-assistants/claude-apps-gateway-on-aws/: .gitignore  (+7 more)
ai-coding-assistants/claude-code-proxy-on-aws/: README.md  pyproject.toml
ai-coding-assistants/claude-code-proxy-on-aws/docs/: API_SPEC.md  BEDROCK_FALLBACK.md  README.md
ai-coding-assistants/claude-code-proxy-on-aws/gateway/core/: config.py  dependencies.py  exceptions.py
ai-coding-assistants/claude-code-proxy-on-aws/gateway/domains/runtime/: anthropic_client.py  bedrock_client.py  circuit_breaker.py  services.py
ai-coding-assistants/claude-code-proxy-on-aws/gateway/domains/runtime/converter/: request_converter.py
ai-coding-assistants/claude-code-proxy-on-aws/infra/: requirements.txt
ai-coding-assistants/claude-code-proxy-on-aws/infra/cdk_constructs/: api.py  compute.py  data.py
ai-coding-assistants/claude-code-proxy-on-aws/infra/stacks/: foundation_stack.py  gateway_task_definition.py
ai-coding-assistants/claude-code-proxy-on-aws/migrations/versions/: 003_add_anthropic_model_id_to_model_catalog.py
ai-coding-assistants/claude-code-proxy-on-aws/scripts/: deploy.sh  local-bootstrap.py
ai-coding-assistants/claude-code-proxy-on-aws/shared/: exceptions.py
ai-coding-assistants/claude-code-proxy-on-aws/shared/models/: model_catalog.py
ai-coding-assistants/claude-code-proxy-on-aws/shared/schemas/: model_catalog.py
ai-coding-assistants/claude-code-proxy-on-aws/tests/unit/gateway/: test_anthropic_client.py  test_bedrock_client.py  test_circuit_breaker.py  test_request_converter.py  test_runtime_fallback.py
databases/: README.md
(+176 files in other folders)
